Working out some spacing issues and trying to clean up

--- a/src/Components/Coats/Coats.css
+++ b/src/Components/Coats/Coats.css
@@ -1,22 +1,19 @@
 .coat-container {
     margin: 40px auto;
     display: flex;
-    flex-flow: row nowrap;
+    flex-flow: row wrap;
     justify-content: space-evenly;
     align-items: center;
     font-size: 0.8rem;
 }
 
 .img-wrapper-home {
-    max-width: 220px;
+    width: 300px;
     padding: 8px;
+    margin: 20px;
     border-radius: 10px;
     position: relative;
     background: linear-gradient(#e66465, #9198e5);;
-}
-
-.gallery-cards-container {
-    padding: 20px;
 }
 
 .gallery-img-wrapper {
