--- a/src/Components/EmojiCard/EmojiCard.css
+++ b/src/Components/EmojiCard/EmojiCard.css
@@ -1,3 +1,12 @@
+.cards-container {
+    margin: 20px auto;
+    /*width: 70%;*/
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
 .emoji-card {
     margin: 10px;
     padding: 10px;
